Chaning test runner to Mocha; ES6 support

--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
         "gulp-spawn": "*",
         "sinon": "*",
         "bower": "*",
-        "karma-sinon": "*"
+        "karma-sinon": "*",
+        "gulp-traceur": "*",
+        "gulp-bower": "*",
+        "mocha": "*",
+        "gulp-mocha": "*",
+        "chai": "*",
+        "karma-mocha": "*",
+        "karma-chai": "*"
     },
     "engines": {
         "node": ">=0.8.0"
