--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "gulp-mocha": "*",
         "chai": "*",
         "karma-mocha": "*",
-        "karma-chai": "*"
+        "karma-chai": "*",
+        "mocha-teamcity-reporter": "*"
     },
     "engines": {
         "node": ">=0.8.0"
