--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "node": ">=0.8.0"
     },
     "scripts" : {
-        "test" : "gulp"
+        "test": "gulp",
+        "ci" : "gulp ci"
     }
 }
