Adding product list

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
         "dustjs-linkedin-helpers": "*",
         "jquery": "*",
         "promise-js": "*",
-        "sinon": "*"
+        "sinon": "*",
+        "underscore": "*"
     },
     "ignore": [
         "bower.json"
